// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/layout/Sidenav adds mini classes without sideBarOpen 1`] = `
<div
  className="MuiPaper-root-a MuiPaper-shadow16-s MuiPaper-rounded-b SideNav-listWrapper-1 SideNav-sideNavMini-2"
>
  <ul
    className="MuiList-root-11 MuiList-padding-12 SideNav-list-6"
  >
    <a
      href="/log"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-15 MuiListItem-gutters-1c MuiListItem-default-18 SideNav-listItem-7"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-1s MuiButton-root-1e MuiButton-flatAccent-1i SideNav-button-8"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1g"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-1u fa fa-file-text-o SideNav-icon-5"
            />
            <p
              className="SideNav-label-3 SideNav-labelMini-4"
            >
              Log
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-21"
          />
        </button>
      </li>
    </a>
    <a
      href="/execute"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-15 MuiListItem-gutters-1c MuiListItem-default-18 SideNav-listItem-7"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-1s MuiButton-root-1e MuiButton-flatAccent-1i SideNav-button-8"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1g"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-1u fa fa-cog SideNav-icon-5"
            />
            <p
              className="SideNav-label-3 SideNav-labelMini-4"
            >
              Execute
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-21"
          />
        </button>
      </li>
    </a>
    <a
      href="/config"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-15 MuiListItem-gutters-1c MuiListItem-default-18 SideNav-listItem-7"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-1s MuiButton-root-1e MuiButton-flatAccent-1i SideNav-button-8"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1g"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-1u fa fa-pencil SideNav-icon-5"
            />
            <p
              className="SideNav-label-3 SideNav-labelMini-4"
            >
              Config
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-21"
          />
        </button>
      </li>
    </a>
    <a
      href="/history"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-15 MuiListItem-gutters-1c MuiListItem-default-18 SideNav-listItem-7"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-1s MuiButton-root-1e MuiButton-flatAccent-1i SideNav-button-8"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1g"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-1u fa fa-history SideNav-icon-5"
            />
            <p
              className="SideNav-label-3 SideNav-labelMini-4"
            >
              History
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-21"
          />
        </button>
      </li>
    </a>
    <a
      href="/movies"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-15 MuiListItem-gutters-1c MuiListItem-default-18 SideNav-listItem-7"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-1s MuiButton-root-1e MuiButton-flatAccent-1i SideNav-button-8"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1g"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-1u fa fa-film SideNav-icon-5"
            />
            <p
              className="SideNav-label-3 SideNav-labelMini-4"
            >
              Movies
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-21"
          />
        </button>
      </li>
    </a>
    <a
      href="/pending"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-15 MuiListItem-gutters-1c MuiListItem-default-18 SideNav-listItem-7"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-1s MuiButton-root-1e MuiButton-flatAccent-1i SideNav-button-8"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1g"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-1u fa fa-check SideNav-icon-5"
            />
            <p
              className="SideNav-label-3 SideNav-labelMini-4"
            >
              Pending
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-21"
          />
        </button>
      </li>
    </a>
    <a
      href="/schedule"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-15 MuiListItem-gutters-1c MuiListItem-default-18 SideNav-listItem-7"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-1s MuiButton-root-1e MuiButton-flatAccent-1i SideNav-button-8"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1g"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-1u fa fa-calendar SideNav-icon-5"
            />
            <p
              className="SideNav-label-3 SideNav-labelMini-4"
            >
              Schedule
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-21"
          />
        </button>
      </li>
    </a>
    <a
      href="/seen"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-15 MuiListItem-gutters-1c MuiListItem-default-18 SideNav-listItem-7"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-1s MuiButton-root-1e MuiButton-flatAccent-1i SideNav-button-8"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1g"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-1u fa fa-eye SideNav-icon-5"
            />
            <p
              className="SideNav-label-3 SideNav-labelMini-4"
            >
              Seen
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-21"
          />
        </button>
      </li>
    </a>
    <a
      href="/series"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-15 MuiListItem-gutters-1c MuiListItem-default-18 SideNav-listItem-7"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-1s MuiButton-root-1e MuiButton-flatAccent-1i SideNav-button-8"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1g"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-1u fa fa-tv SideNav-icon-5"
            />
            <p
              className="SideNav-label-3 SideNav-labelMini-4"
            >
              Series
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-21"
          />
        </button>
      </li>
    </a>
    <a
      href="/status"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-15 MuiListItem-gutters-1c MuiListItem-default-18 SideNav-listItem-7"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-1s MuiButton-root-1e MuiButton-flatAccent-1i SideNav-button-8"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1g"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-1u fa fa-heartbeat SideNav-icon-5"
            />
            <p
              className="SideNav-label-3 SideNav-labelMini-4"
            >
              Status
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-21"
          />
        </button>
      </li>
    </a>
  </ul>
  <div
    className="SideNav-versionHide-9"
  >
    <div
      className="Version-version-28"
    >
      <p
        className="Version-par-29"
      >
        Version Info
      </p>
      <p
        className="Version-par-29"
      >
        Flexget: 
         
         
      </p>
      <p
        className="Version-par-29"
      >
        API: 
      </p>
    </div>
  </div>
</div>
`;

exports[`components/layout/Sidenav renders correctly with sideBarOpen 1`] = `
<div
  className="MuiPaper-root-a MuiPaper-shadow16-s MuiPaper-rounded-b SideNav-listWrapper-1"
>
  <ul
    className="MuiList-root-11 MuiList-padding-12 SideNav-list-6"
  >
    <a
      href="/log"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-15 MuiListItem-gutters-1c MuiListItem-default-18 SideNav-listItem-7"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-1s MuiButton-root-1e MuiButton-flatAccent-1i SideNav-button-8"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1g"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-1u fa fa-file-text-o SideNav-icon-5"
            />
            <p
              className="SideNav-label-3"
            >
              Log
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-21"
          />
        </button>
      </li>
    </a>
    <a
      href="/execute"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-15 MuiListItem-gutters-1c MuiListItem-default-18 SideNav-listItem-7"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-1s MuiButton-root-1e MuiButton-flatAccent-1i SideNav-button-8"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1g"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-1u fa fa-cog SideNav-icon-5"
            />
            <p
              className="SideNav-label-3"
            >
              Execute
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-21"
          />
        </button>
      </li>
    </a>
    <a
      href="/config"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-15 MuiListItem-gutters-1c MuiListItem-default-18 SideNav-listItem-7"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-1s MuiButton-root-1e MuiButton-flatAccent-1i SideNav-button-8"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1g"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-1u fa fa-pencil SideNav-icon-5"
            />
            <p
              className="SideNav-label-3"
            >
              Config
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-21"
          />
        </button>
      </li>
    </a>
    <a
      href="/history"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-15 MuiListItem-gutters-1c MuiListItem-default-18 SideNav-listItem-7"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-1s MuiButton-root-1e MuiButton-flatAccent-1i SideNav-button-8"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1g"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-1u fa fa-history SideNav-icon-5"
            />
            <p
              className="SideNav-label-3"
            >
              History
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-21"
          />
        </button>
      </li>
    </a>
    <a
      href="/movies"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-15 MuiListItem-gutters-1c MuiListItem-default-18 SideNav-listItem-7"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-1s MuiButton-root-1e MuiButton-flatAccent-1i SideNav-button-8"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1g"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-1u fa fa-film SideNav-icon-5"
            />
            <p
              className="SideNav-label-3"
            >
              Movies
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-21"
          />
        </button>
      </li>
    </a>
    <a
      href="/pending"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-15 MuiListItem-gutters-1c MuiListItem-default-18 SideNav-listItem-7"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-1s MuiButton-root-1e MuiButton-flatAccent-1i SideNav-button-8"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1g"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-1u fa fa-check SideNav-icon-5"
            />
            <p
              className="SideNav-label-3"
            >
              Pending
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-21"
          />
        </button>
      </li>
    </a>
    <a
      href="/schedule"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-15 MuiListItem-gutters-1c MuiListItem-default-18 SideNav-listItem-7"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-1s MuiButton-root-1e MuiButton-flatAccent-1i SideNav-button-8"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1g"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-1u fa fa-calendar SideNav-icon-5"
            />
            <p
              className="SideNav-label-3"
            >
              Schedule
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-21"
          />
        </button>
      </li>
    </a>
    <a
      href="/seen"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-15 MuiListItem-gutters-1c MuiListItem-default-18 SideNav-listItem-7"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-1s MuiButton-root-1e MuiButton-flatAccent-1i SideNav-button-8"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1g"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-1u fa fa-eye SideNav-icon-5"
            />
            <p
              className="SideNav-label-3"
            >
              Seen
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-21"
          />
        </button>
      </li>
    </a>
    <a
      href="/series"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-15 MuiListItem-gutters-1c MuiListItem-default-18 SideNav-listItem-7"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-1s MuiButton-root-1e MuiButton-flatAccent-1i SideNav-button-8"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1g"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-1u fa fa-tv SideNav-icon-5"
            />
            <p
              className="SideNav-label-3"
            >
              Series
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-21"
          />
        </button>
      </li>
    </a>
    <a
      href="/status"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-15 MuiListItem-gutters-1c MuiListItem-default-18 SideNav-listItem-7"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-1s MuiButton-root-1e MuiButton-flatAccent-1i SideNav-button-8"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1g"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-1u fa fa-heartbeat SideNav-icon-5"
            />
            <p
              className="SideNav-label-3"
            >
              Status
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-21"
          />
        </button>
      </li>
    </a>
  </ul>
  <div
    className=""
  >
    <div
      className="Version-version-28"
    >
      <p
        className="Version-par-29"
      >
        Version Info
      </p>
      <p
        className="Version-par-29"
      >
        Flexget: 
         
         
      </p>
      <p
        className="Version-par-29"
      >
        API: 
      </p>
    </div>
  </div>
</div>
`;
